@@ -12,5 +12,6 @@
  - Added support for sysvinit (Debian).
  - Added a default response for commands echo, sql and show-news-from-jamendo (Jabber).
  - Added better logging for the skip command (Jabber).
+ - Added a handler to retrieve current track info (WebAPI).
  - Removed old commands: hotline, icelog, listeners, mail (CLI).
  - Changed tags order in tags/show: subtags go last.
